--- a/styles.css
+++ b/styles.css
@@ -463,5 +463,49 @@ body{
     margin: 0rem 3rem;
 }
 
+footer{
+    padding: 4rem 6rem;
+    display: flex;
+}
+.footer-left{
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    gap: 2rem;
+    margin-right: 10rem;
+}
+.left-top{
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+
+}
+.left-top img{
+    height: 40px;
+}
+
+.left-mid{
+    color: #555;
+}
+.left-btm img{
+
+    height: 24px;
+    padding-right: 0.6rem;
+}
+
+.footer-right{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-gap: 8rem;
+}
+
+.footer-tags{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.footer-tags h4{
+    padding-bottom: 1rem;
+}
 
 
